--- a/src/pages/[lang]/products/[productId].astro
+++ b/src/pages/[lang]/products/[productId].astro
@@ -33,8 +33,7 @@ const { lang, productId } = Astro.params;
 setLocale(lang as Locale);
 
 const headerColors = {
-  backgroundColor: product.header_background,
-  textColor: product.header_text_color
+  backgroundColor: product.header_background
 };
 ---
 
