--- a/src/pages/[lang]/productos/[productId].astro
+++ b/src/pages/[lang]/productos/[productId].astro
@@ -34,8 +34,7 @@ const { lang, productId } = Astro.params;
 setLocale(lang as Locale);
 
 const headerColors = {
-  backgroundColor: product.header_background,
-  textColor: product.header_text_color
+  backgroundColor: product.header_background
 };
 ---
 
